# installer

./: .gitignore  Cargo.toml
.do/: pack.sh  test.sh
default/: config.toml
src/: error.rs  main.rs  prelude.rs
src/boot/: bootloader.rs  initramfs.rs  kernel.rs  mod.rs
src/boot/resource/: konfig
src/chroot/: download.rs  mod.rs  mounts.rs
src/disks/: encrypt.rs  mod.rs  partition.rs  volume.rs
src/disks/filesystem/: btrfs.rs  ext4.rs  mod.rs
src/system/: fstab.rs  locale.rs  mod.rs  networking.rs  portage.rs  sysutils.rs  update.rs  users.rs
src/system/resources/: trim.stop.sh  zram.start.sh  zram.stop.sh
src/tests/: config.rs  error.rs
src/utils/: mod.rs
